--- a/NOTES.cfg
+++ b/NOTES.cfg
@@ -1,61 +1,8 @@
-Order of to-do
+spoils.php
+	evolveParams - pokemon table needs evolution level column added
 
-1)	Create signup/login
-2)	Map Movement
-3)	DB Buildout
-		-	Pokemon
-		-	Movesets
-		-	misc
+types
+	update with new table for multi-type
+	--	update combat.php for new types table
 
-
-
-
-
-
-
-
-
-
-
-
-Create an Account
-	player ID
-	email
-	password
-	nickname
-	register_date
-	last_login
-
-
-
-DATABASES
-	odyssey_trainers
-	odyssey_staticdata
-		pokemon
-		moves
-		
-		moves
-		types
-			--	Updated
-			**	Fix combat.php function effectiveness
-		pokemon
-		exp
-		nature
-
-
-
-
-<?php
-
-//TRAINER TABLE
-$query = "CREATE TABLE `trainers` (
-	`id` 				INT NOT NULL AUTO_INCREMENT PRIMARY KEY,
-	email 				VARCHAR(100) NOT NULL,
-	UNIQUE KEY unique_email (email),
-	`password`			varchar(255),
-	`nickname` 			varchar(100),
-	`register_date`		timestamp DEFAULT CURRENT_TIMESTAMP,
-	`last_login`		TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
-) ENGINE=MyISAM DEFAULT CHARSET=latin1";
-
-//POKEMON TABLE
+Evolution - use multi colors
